# tentpole

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.obsidian/: workspace.json
docs/superpowers/plans/: 2026-07-12-core-domain.md  2026-07-12-edges.md  2026-07-12-sheet-layer.md  2026-07-13-jira-dc-adapter.md  2026-07-13-patch-0.2.1.md  2026-07-13-roster-and-rename.md  2026-07-14-discovery-and-people.md  2026-07-14-gantt-and-memory.md
docs/superpowers/specs/: 2026-07-12-jira-smartsheet-sync-design.md  (+2 more)
rules/: hygiene.yaml
src/tentpole/: buckets.py  changeplan.py  checks.py  cli.py  demand.py  diagnostics.py  fixes.py  gantt.py  humansheets.py  hygiene.py  linkgraph.py  model.py  runreport.py  schema.py  sheets.py  snapshots.py  sync.py  throughput.py
tests/: conftest.py  test_adapter_config.py  test_adapter_http.py  test_bootstrap.py  test_buckets.py  test_carryover.py  test_changeplan.py  test_checks_capacity.py  test_checks_deadlines.py  test_checks_flow.py  test_cli.py  test_cli_sync.py  test_demand.py  test_diagnostics.py  test_fix_apply.py  test_fixes.py  test_gantt.py  test_humansheets.py  test_hygiene.py  test_jira_common.py  test_jira_extract.py  test_jira_extract_bundle.py  test_jira_extract_dc.py  test_jira_extract_dc_bundle.py  test_link_hygiene.py  test_linkgraph.py  test_model.py  test_runreport.py  test_schema.py  test_schema_conformance.py  test_sheets_issues.py  test_sheets_rest.py  test_sheets_rollups.py  test_smartsheet_pull.py  test_smartsheet_push.py  test_snapshots.py  test_sync.py  test_throughput.py
(+8 files in other folders)
