[project]
name = "tentpole"
version = "0.1.0"
description = "One-way Jira -> Smartsheet planning transformer"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
tentpole = "tentpole.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
