[project]
name = "tentpole"
version = "0.2.1"
description = "One-way Jira -> Smartsheet planning transformer"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["pyyaml>=6"]
keywords = ["jira", "smartsheet", "planning", "capacity", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
]

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1"]

[project.scripts]
tentpole = "tentpole.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
